<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_top"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/fpt_play"
        app:civ_border_color="@color/colorFPT"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/text_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="@dimen/padding_text_login"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/padding_text_login"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/padding_text_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user" />

    <EditText
        android:id="@+id/text_id_das"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/padding_text_login"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_card"
        android:drawablePadding="@dimen/padding_text_login"
        android:ems="10"
        android:hint="@string/text_id_das"
        android:inputType="textPassword"
        android:padding="@dimen/padding_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pass" />

    <EditText
        android:id="@+id/text_key_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/padding_text_login"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_key_login"
        android:drawablePadding="@dimen/padding_text_login"
        android:ems="10"
        android:hint="@string/text_key"
        android:padding="@dimen/padding_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_id_das" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_key_login" />

</androidx.constraintlayout.widget.ConstraintLayout>